--- a/style.css
+++ b/style.css
@@ -1,125 +1,83 @@
-*, html, body{
+body {
     margin: 0;
     padding: 0;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: Arial, sans-serif;
+    background-color: black
 }
-
-.fullcntr{
-    display: flex;
-    width: 100%;
-    background-color: white;
-}
-
-.wrap{
-    width: 100%;
-    display: flex;
+.media a img{
+    width: 30px;
+    margin-top: 30px;
+    margin-left: 10px;
     align-items: center;
-    font-size: 20px;
-    justify-content: space-between;
-    height: 80px;
-    background-color: black;
-    box-shadow: 0 7px 15px 0 rgba(0, 0, 0, 0);
 }
-.brand{
-    display: flex;
-    color: white;
-    font-size: 30px;
-    padding: 20px;
-}
-.brand span{
-    color: rgb(17, 174, 205);
-    margin-left: 4px;
+.contact-container p {
+    margin: 10px 0 0;
+    color: #555;
 }
 
-.navigation{
+.navbar {
+    width: 100%;
+    background-color: blueviolet;
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    z-index: 1000;
+}
+
+.navbar ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
     display: flex;
     justify-content: center;
+}
+
+.navbar li {
+    padding: 14px 20px;
+}
+
+.navbar a {
+    color: white;
+    text-decoration: none;
+    display: block;
+    text-align: center;
+}
+
+.navbar a:hover {
+    color: red;
+}
+
+.profile-container {
+    display: flex;
+    flex-direction: column;
     align-items: center;
-}
-.navigation>li{
-    list-style-type: none;
-    padding: 25px;
-}
-
-.navigation>li>a{
-    text-transform: capitalize;
-    font-size: 20px;
-    color: white;
-    text-decoration: none;
-}
-.aktive{
-    background-color: rgb(39, 92, 235);
-    color: white;
-    padding: 7px;
-}
-.navigation>li>a:hover{
-    color: rgb(4, 223, 4);
-    transition: all .1s ease-in-out;
-}
-.aktive:hover{
-    color: white !important;
-}
-.navigation>li>img{
-    width: 50px;
-    height: 50px;
-    border-radius: 50px;
-}
-
-.navigation>li>img:hover{
-    width: 60px;
-    height: 60px;
-    border-radius: 60px;
-    transition: all .1s ease-in-out;
-}
-
-.foto{
-    padding: 100px;
-    border-radius: 150px;
-    float: right;
-    margin-left: 50px;
-    margin-bottom: 100px;
-    width: 400px;
-}
-.jasa{
-    padding-top: 20px;
-    font-size: 25px;
-    padding-left: 80px;
-    font-weight: 900px;
-}
-button{
-    margin-top: 20px;
-    margin-left: 50px;
-    margin-bottom: 10px;
-    background-color: rgb(0, 68, 255);
-    font-weight: 500px;
+    background-color: white;
+    padding: 20px;
     border-radius: 10px;
-}
-button>a{
-    color: white;
-    font-weight: 200px;
-    font-size: 16px;
-    list-style-type: none;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    text-decoration: none;
-    padding: 10px 10px 10px 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    margin-top: 60px; /* Adjust for fixed navbar */
 }
 
-.sambutan{
-    padding-top: 100px;
-    padding-left: 50px;
-    color: black;
-    padding-bottom: 10px;
+.profile-pic img {
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    border: 2px solid #333;
+}
+
+.profile-info {
+    margin-top: 20px;
+}
+
+.profile-info h1 {
+    margin: 0;
     font-size: 24px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-.me{
-    color: black;
-    font-size: 25px;
-    padding-left: 50px;
+
+.profile-info p {
+    margin: 10px 0 0;
+    color: #555;
 }
-.text{
-    padding-top: 10px;
-    color: black;
-    font-size: 20px;
-    padding-left: 50px;
-}
+
